traversal.snake.Snake.scala.error
Erreur de compilation :
Snake:8: error: ';' expected but 'else' found.
  else{
  ^